# musictidy

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+2 more)
docs/: architecture.md  beets-config.example.yaml  cloudflare-tunnel.md  third-party.md
server/: Dockerfile  README.md  pyproject.toml
server/app/: __init__.py  album_split.py  archive.py  auth.py  beets_bridge.py  config.py  cuesplit.py  db.py  fingerprint_db.py  info_sidecar.py  lyrics_db.py  main.py  organize.py  templates_engine.py
server/app/api/: admin.py  auth.py  curation.py  library.py  playlist.py  web.py  wishlist.py
server/app/models/: beets_view.py  ours.py
server/app/static/: app.css
server/app/templates/: _artist_list.html  archives.html  artist_detail.html  artists.html  base.html  duplicates.html  login.html  organize.html
server/app/transcode/: cache.py  ffmpeg.py
server/app/workers/: archive_extract.py  coverart.py  cue_split.py  fingerprint.py  musicbrainz.py  queue.py  scan.py  scheduler.py  sync_sidecars.py  trash_gc.py
server/migrations/: 001_initial.sql  002_auth.sql  003_artist_genres.sql  004_release_group_tracks.sql  005_playlist.sql  006_local_album.sql  007_wishlist.sql  008_split_suggestion.sql  009_fingerprint_rg.sql  010_fingerprint_candidates.sql
server/tests/: conftest.py  test_archive.py  test_auth.py  test_cuesplit.py  test_fingerprint.py  test_musicbrainz.py  test_queue.py  test_scan.py  test_smoke.py  test_sync_sidecars.py
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
(+15 files in other folders)
