[project]
name = "musictidy"
version = "0.1.0"
description = "Self-hosted music library curation tool"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "WanpengQian" }]

dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",

    # Config
    "pydantic>=2.8",
    "pydantic-settings>=2.5",

    # DB
    "sqlalchemy>=2.0",

    # Music library backend (作为库 import)
    "beets>=2.0",
    "mutagen>=1.47",

    # MusicBrainz / AcoustID
    "musicbrainzngs>=0.7",
    "pyacoustid>=1.3",

    # 定时任务
    "apscheduler>=3.10",

    # HTTP client for cover art etc.
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
